[gd_scene load_steps=14 format=3 uid="uid://c8nod22b11rdq"]

[ext_resource type="Script" uid="uid://dic0jcmgh1g4a" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://b60lqyiak2ctt" path="res://level.gd" id="2_h2yge"]
[ext_resource type="Resource" uid="uid://cx72q5kct1jmk" path="res://levels/5.tres" id="3_5vw27"]
[ext_resource type="Resource" uid="uid://rakcplqb704m" path="res://levels/3.tres" id="3_7mycd"]
[ext_resource type="Resource" uid="uid://bny74n4dpfo6j" path="res://levels/4.tres" id="3_272bh"]
[ext_resource type="Resource" uid="uid://c1r5dlwwt6b88" path="res://levels/1.tres" id="3_h2yge"]
[ext_resource type="Resource" uid="uid://dig2pdtogcqok" path="res://levels/6.tres" id="3_kek77"]
[ext_resource type="Resource" uid="uid://nqajk8s7r1uy" path="res://levels/end.tres" id="3_lquwl"]
[ext_resource type="Resource" uid="uid://4pirjujfklfu" path="res://levels/2.tres" id="4_lquwl"]
[ext_resource type="SystemFont" uid="uid://bshntagshj5xa" path="res://font.tres" id="10_4c57u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5vw27"]
bg_color = Color(0.243137, 0.207843, 0.27451, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kek77"]
font = ExtResource("10_4c57u")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_4c57u"]
font = ExtResource("10_4c57u")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")
levels = Array[ExtResource("2_h2yge")]([ExtResource("3_h2yge"), ExtResource("4_lquwl"), ExtResource("3_7mycd"), ExtResource("3_272bh"), ExtResource("3_5vw27"), ExtResource("3_kek77"), ExtResource("3_lquwl")])

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5vw27")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Chat" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "You gotta make it loop âœ“"
label_settings = SubResource("LabelSettings_kek77")
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.93

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorsAspect" type="AspectRatioContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.16
ratio = 0.1284
alignment_horizontal = 2

[node name="Colors" type="GridContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/ColorsAspect"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/v_separation = 8

[node name="GridAspect" type="AspectRatioContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Grid" type="GridContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/GridAspect"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 20

[node name="Controls" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Setup" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Controls"]
layout_mode = 2
theme_override_fonts/font = ExtResource("10_4c57u")
text = "Setup"

[node name="Play" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Controls"]
layout_mode = 2
theme_override_fonts/font = ExtResource("10_4c57u")
text = "Play/Pause"

[node name="TimerSpeed" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
min_value = 0.1
max_value = 0.95
step = 0.01
value = 0.1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/Controls/TimerSpeed"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -36.0
offset_right = 45.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
text = "Loop speed"
label_settings = SubResource("LabelSettings_4c57u")

[node name="TickLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("10_4c57u")
text = "Tick: 0/100"

[node name="NextLevel" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("10_4c57u")
disabled = true
text = "Next Level"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.535

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Controls/Setup" to="." method="_on_setup_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Controls/Play" to="." method="_on_play_pressed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/Controls/TimerSpeed" to="." method="_on_timer_speed_value_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Controls/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
